--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
+    "expo-notifications": "~0.28.16",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
