--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.16",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.24",
     "react": "18.2.0",
+    "react-is": "^18.3.1",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0"
