--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
