--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-notifications": "~0.28.16",
+    "expo-skeleton": "^1.0.0",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.24",
     "react": "18.2.0",
@@ -24,12 +25,14 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-template-literals": "^7.24.7"
   },
   "private": true
 }
