--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-toast-message": "^2.2.0"
